deploy/triton-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: triton-ingress
spec:
  defaultBackend:
    service:
      name: triton-server
      port:
        number: 8000
